# MCServerNap

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  lib.rs  main.rs  msmp.rs
