[package]
name = "mcservernap"
version = "0.4.2"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process", "signal"] }
log = "0.4"
env_logger = "0.11.8"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0.145"
base64 = "0.22.1"
image = "0.25.8"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "handshake"] }
